# pb-devkit

./: .gitignore  ANALYSIS_REPORT.md  LICENSE  README.md  SKILL.md  UNIVERSAL_PARSER_DESIGN.md  USAGE.md  finish-release.ps1  pb.py  pyproject.toml  test_full_pipeline.py  test_pbl_export.py  test_pbl_parse.py  test_result.txt
.github/workflows/: ci.yml
docs/: AGENT_SKILL.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_ANALYSIS.md  SKILL.md  UNIVERSAL_PARSER_DESIGN.md  USAGE.md
pb-devkit-1.x/: build_decompiler.py  debug_pbdcli.py  export_logistic.py  export_logistic_structured.py  extract_srw.py  pb.py  pyproject.toml  test_decompile.py  test_decompile_login.py  test_dw_parse.py  test_dw_refs.py  test_logistic_pbd.py  test_orca_export.py  test_pbd.py  test_pbd_struct.py
pb-devkit-1.x/idea-plugin/: README.md  settings.gradle.kts
pb-devkit-1.x/idea-plugin/src/main/java/com/pbdevkit/powerscript/: PBIcons.java  PSApplicationComponent.java  PSCommenter.java  PSPsiElement.java  PSSyntaxHighlighter.java
pb-devkit-1.x/idea-plugin/src/main/java/com/pbdevkit/powerscript/actions/: RunLintFileAction.java
pb-devkit-1.x/idea-plugin/src/main/java/com/pbdevkit/powerscript/hover/: PSDocumentationProvider.java
pb-devkit-1.x/idea-plugin/src/main/java/com/pbdevkit/powerscript/inspections/: DeepNestingInspection.java  PSRoutineParser.java  SelectStarInspection.java
pb-devkit-1.x/idea-plugin/src/main/resources/messages/: PowerscriptBundle.properties
pb-devkit-1.x/src/pb_devkit/: __init__.py  chunk_engine.py  cli.py  decompiler.py  pbl_grouper.py  pbl_writer.py  pborca_engine.py  project_detector.py  py.typed  refactoring.py  sr_parser.py
pb-devkit-1.x/src/pb_devkit/commands/: __init__.py  analyze.py  autoexport.py  build.py  compile.py  decompile.py  diff.py  doctor.py  dw.py  export.py  import_.py  init.py  list.py  migrate.py  pack.py  refactor.py  report.py  review.py  search.py  snapshot.py  stats.py  workflow.py
pb-devkit-1.x/src/pb_devkit/parsers/: __init__.py  dw_parser.py  function_parser.py  window_parser.py
pb-devkit-1.x/tests/: test_pb_devkit.py
pb-devkit-1.x/tools/: migrate_to_web.py
pb-devkit-1.x/vscode-extension/: .vscodeignore  package-lock.json  package.json  powerscript-1.0.0.vsix
pb-devkit-1.x/vscode-extension/src/: extension.js
pb-devkit-2.x/: AGENT_SKILL.md  CHANGELOG.md  CLI_EXAMPLES.md  FUNCTION_MATRIX.md  README.md  RELEASE_v2.2.1.md  TODO.md
pb-devkit-2.x/idea-plugin/: build.gradle.kts
pb-devkit-2.x/pb-devkit-cli/: Cargo.toml
pb-devkit-2.x/pb-devkit-cli/src/: lib.rs  main.rs
pb-devkit-2.x/pb-devkit-cli/src/commands/: autoexport_cmd.rs  build_cmd.rs  decompile_cmd.rs  diff_cmd.rs  dw_cmd.rs  migrate_cmd.rs  mod.rs  pbl_cmd.rs  pe_cmd.rs  project_cmd.rs  refactor_cmd.rs  report_cmd.rs  review_cmd.rs  search_cmd.rs  snapshot_cmd.rs  workflow_cmd.rs
pb-devkit-2.x/pb-devkit-cli/tests/: cli_integration.rs
pb-devkit-2.x/pb-devkit-core/: Cargo.toml
pb-devkit-2.x/pb-devkit-core/src/: decompile.rs  dw.rs  lib.rs  pbl.rs  pbl_writer.rs  pe.rs  project.rs  report.rs  retry.rs  search.rs  search_cache.rs  search_index.rs  snapshot.rs  types.rs
pb-devkit-2.x/pb-devkit-desktop/: .gitignore  angular.json  package-lock.json  package.json
pb-devkit-2.x/pb-devkit-desktop/src-tauri/: Cargo.toml  tauri.conf.json
pb-devkit-2.x/pb-devkit-desktop/src-tauri/capabilities/: default.json
pb-devkit-2.x/pb-devkit-desktop/src-tauri/src/: lib.rs  main.rs
pb-devkit-2.x/pb-devkit-desktop/src-tauri/src/commands/: build.rs  decompile.rs  diff.rs  dw.rs  mod.rs  pbl.rs  pe.rs  project.rs  refactor.rs  report.rs  review.rs  scan.rs  search.rs  snapshot.rs  workflow.rs
src/pb_devkit/: __init__.py  cli.py  config.py  (+6 more)
tests/: test_pb_devkit.py  test_pe_extractor.py
vscode-extension/: README.md  language-configuration.json  package.json
(+59 files in other folders)
