[package]
name = "pb-devkit-cli"
version = "2.0.0"
edition = "2021"
description = "PB DevKit CLI - PowerBuilder Legacy System Toolkit"

[[bin]]
name = "pbdevkit"
path = "src/main.rs"

[dependencies]
# Shared core library
pb-devkit-core = { path = "../pb-devkit-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "15"
dirs = "6"
walkdir = "2"