[package]
name = "pb-devkit-desktop"
version = "0.1.0"
description = "PB DevKit 2.0 - PowerBuilder Legacy System Toolkit"
authors = ["PB DevKit Team"]
edition = "2021"

[lib]
name = "pb_devkit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

# Shared core library
pb-devkit-core = { path = "../../pb-devkit-core" }

[features]
custom-protocol = ["tauri/custom-protocol"]



# 编译优化配置
[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
